--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   
+  audioplayers: ^6.1.0
   http: ^1.2.2
   html: ^0.15.4
   json_annotation: ^4.9.0
