--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,13 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
   build_runner: ^2.3.3
+  flutter_launcher_icons: ^0.14.1
   json_serializable: ^6.8.0
   
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/nojcasts_icon_w_background.png"
+  min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
