--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   html: ^0.15.4
   json_annotation: ^4.9.0
   path_provider: ^2.1.4
+  sqflite: ^2.4.0
   xml: ^6.5.0
 
 dev_dependencies:
@@ -51,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
   build_runner: ^2.3.3
   flutter_launcher_icons: ^0.14.1
