--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,8 @@ unlinked_spec.ds
 **/android/key.properties
 *.jks
 
+**/android/app/.cxx/*
+
 # iOS/XCode related
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
