viewmodel not working now

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,5 +23,8 @@ linter:
   rules:
     - prefer_single_quotes
 
+formatter:
+  trailing_commas: preserve
+
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
